--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "recipes",
   "version": "1.0.0",
   "main": "index.mjs",
+  "scripts": {
+    "build": "node index.mjs"
+  },
   "repository": "git@github.com:Half-Shot/recipies.git",
   "author": "Will Hunt <willh@matrix.org>",
   "license": "MIT",
