--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -8,7 +8,11 @@ on:
 jobs:
   build:
     runs-on: ubuntu-18.04
+
+  deploy:
+    runs-on: ubuntu-18.04
     steps:
+      # Build markdown stuff using node index.mjs
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
@@ -16,18 +20,14 @@ jobs:
       - run: npm install
       - run: npm run-script build
 
-  deploy:
-    runs-on: ubuntu-18.04
-    steps:
-      - uses: actions/checkout@v2
-
+      # Build book using mdbook
       - name: mdBook Action
         uses: peaceiris/actions-mdbook@v1.1.13
         with:
           mdbook-version: 'latest'
-
       - run: mdbook build
 
+      # Deploy to GitHub Pages
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
