--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -6,10 +6,7 @@ on:
       - main
 
 jobs:
-  build:
-    runs-on: ubuntu-18.04
-
-  deploy:
+  buildAndDeploy:
     runs-on: ubuntu-18.04
     steps:
       # Build markdown stuff using node index.mjs
