--- a/recipes/halfy-biryani/recipe.yml
+++ b/recipes/halfy-biryani/recipe.yml
@@ -1,14 +1,15 @@
 title: Halfy's Biryani
 
 description: >
-  I wasn't satisifed with most of the veg biryani options out
+  I wasn't satisfied with most of the veg biryani options out
   there so I ended up writing my own by combining some of them together.
 
 sources:
   - https://www.bbcgoodfood.com/recipes/lamb-biryani
   - https://www.bbcgoodfood.com/recipes/cheats-beetroot-biriyani
 
-category: food
+category: Dinner
+sub_category: Vegan
 
 ingredients: 
   - name: Olive Oil
@@ -50,19 +51,18 @@ ingredients:
 
 steps:
   - step: Cook the vegetables in a little oil, cumin and salt until just a little soft. Set aside
-    time: 10 minutes
-    image: a.jpg
+    time: 10
   - step: Fry the onions on a medium heat for 10 minutes until soft
-    time: 10 minutes
+    time: 10
   - step: Add the ginger paste, half the garlic and cook for a bit
-    time: 1 minute
+    time: 1
   - step: Add the veg back and mix in the curry paste
-    time: 90 seconds
+    time: 1.5
   - step: Add the rice, stock pot and hot water and bring to the boil
-    time: 2 minutes
+    time: 2
   - step: Heat the oven to 180C
-  - step: Stir in the paneer and spinach until just a little liquid is visible, and season.
-  - step: Cover the dish with foil and then a lid. Cook in the oven for 20 minutes.
-  - step: Take out from the oven and give it a stir, if some liquid remains then cook on the hob until it's still moist but not very wet.
-  - step: Scatter coriander and chillies, and mix in some yougart.
+  - step: Stir in the paneer and spinach until just a little liquid is visible, and season
+  - step: Cover the dish with foil and then a lid. Cook in the oven for 20 minutes
+  - step: Take out from the oven and give it a stir, if some liquid remains then cook on the hob until it's still moist but not very wet
+  - step: Scatter coriander and chillies, and mix in some yogurt
           
