Added sub categories

--- a/recipes/vegan-breakfast-cookies/recipe.yml
+++ b/recipes/vegan-breakfast-cookies/recipe.yml
@@ -10,6 +10,7 @@ sources:
   - https://rainbowplantlife.com/healthy-vegan-breakfast-cookies/
 
 category: Breakfast
+sub_category: Vegan
 
 times:
   prep: 30
